# Generated by Django 6.0.4 on 2026-04-17 02:49

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('laboratorios', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Insumo',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('nombre', models.CharField(max_length=150)),
                ('codigo', models.CharField(max_length=50, unique=True)),
                ('unidad_medida', models.CharField(max_length=30)),
                ('stock_actual', models.DecimalField(decimal_places=3, max_digits=10)),
                ('stock_minimo', models.DecimalField(decimal_places=3, max_digits=10)),
                ('consumo_por_practica', models.DecimalField(blank=True, decimal_places=3, max_digits=10, null=True)),
                ('merma_estimada_pct', models.DecimalField(decimal_places=2, default=0, max_digits=5)),
                ('es_reactivo_quimico', models.BooleanField(default=False)),
                ('requiere_control_especial', models.BooleanField(default=False)),
                ('fecha_vencimiento', models.DateField(blank=True, null=True)),
                ('proveedor', models.CharField(blank=True, max_length=150)),
                ('is_active', models.BooleanField(default=True)),
                ('laboratorio', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='insumos', to='laboratorios.laboratorio')),
            ],
            options={
                'verbose_name': 'Insumo',
                'verbose_name_plural': 'Insumos',
                'ordering': ['nombre'],
            },
        ),
    ]
